--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: row;
   flex: 1;
-  margin: 80px 0;
+  margin: 60px 0 80px 0;
   max-width: var(--max-width-container);
 }
 
